--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,13 +1,19 @@
-FROM node:18-alpine
+FROM node:22-alpine
+
+# Install pnpm
+RUN npm install -g pnpm
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-COPY apps/api-gateway/package*.json ./apps/api-gateway/
+# Copy workspace configuration and root package.json
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Copy all package.json files first
+COPY apps/api-gateway/package.json ./apps/api-gateway/
+COPY packages/shared/package.json ./packages/shared/
+
+# Install dependencies first (this will use the lockfile)
+RUN pnpm install --frozen-lockfile
 
 # Copy source code
 COPY apps/api-gateway ./apps/api-gateway
@@ -15,8 +21,13 @@ COPY packages ./packages
 
 # Build the application
 WORKDIR /app/apps/api-gateway
-RUN npm run build
+RUN pnpm run build
+
+# Install production dependencies in the service directory
+RUN pnpm install --prod --frozen-lockfile
+
+WORKDIR /app/apps/api-gateway
 
 EXPOSE 3000
 
-CMD ["npm", "run", "start:prod"]
+CMD ["node", "dist/main"]
