--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.20",
     "@task-flow/shared": "file:../../packages/shared",
+    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -47,6 +48,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
@@ -75,7 +77,6 @@
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
