--- a/apps/task-service/Dockerfile
+++ b/apps/task-service/Dockerfile
@@ -1,13 +1,19 @@
-FROM node:18-alpine
+FROM node:22-alpine
+
+# Install pnpm
+RUN npm install -g pnpm
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-COPY apps/task-service/package*.json ./apps/task-service/
+# Copy workspace configuration and root package.json
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Copy all package.json files first
+COPY apps/task-service/package.json ./apps/task-service/
+COPY packages/shared/package.json ./packages/shared/
+
+# Install dependencies first (this will use the lockfile)
+RUN pnpm install --frozen-lockfile
 
 # Copy source code
 COPY apps/task-service ./apps/task-service
@@ -15,8 +21,13 @@ COPY packages ./packages
 
 # Build the application
 WORKDIR /app/apps/task-service
-RUN npm run build
+RUN pnpm run build
 
-EXPOSE 3002
+# Install production dependencies in the service directory
+RUN pnpm install --prod --frozen-lockfile
 
-CMD ["npm", "run", "start:prod"]
+WORKDIR /app/apps/task-service
+
+EXPOSE 3001
+
+CMD ["node", "dist/main"]
