--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "Sistema de Gestão de Tarefas Colaborativo",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -22,7 +18,7 @@
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
   },
-  "packageManager": "npm@10.9.2",
+  "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=22.0.0"
   }
