--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:16-alpine
     container_name: task-flow-postgres
     environment:
-      POSTGRES_DB: taskflow
-      POSTGRES_USER: taskflow
-      POSTGRES_PASSWORD: taskflow123
+      POSTGRES_DB: ${POSTGRES_DB:-taskflow}
+      POSTGRES_USER: ${POSTGRES_USER:-taskflow}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-taskflow123}
     ports:
       - "5434:5434"
     volumes:
@@ -19,8 +19,8 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: task-flow-rabbitmq
     environment:
-      RABBITMQ_DEFAULT_USER: taskflow
-      RABBITMQ_DEFAULT_PASS: taskflow123
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-taskflow}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-taskflow123}
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -47,14 +47,17 @@ services:
       dockerfile: apps/api-gateway/Dockerfile
     container_name: task-flow-gateway
     ports:
-      - "3000:3000"
+      - "${API_GATEWAY_PORT:-3000}:3000"
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgresql://taskflow:taskflow123@postgres:5432/taskflow
-      - RABBITMQ_URL=amqp://taskflow:taskflow123@rabbitmq:5672
-      - REDIS_URL=redis://redis:6379
-      - JWT_SECRET=your-super-secret-jwt-key-change-in-production
-      - JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+      - NODE_ENV=${NODE_ENV:-development}
+      - DATABASE_URL=${DATABASE_URL}
+      - RABBITMQ_URL=${RABBITMQ_URL}
+      - REDIS_URL=${REDIS_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+      - API_GATEWAY_PORT=${API_GATEWAY_PORT:-3000}
+      - RATE_LIMIT_TTL=${RATE_LIMIT_TTL:-60}
+      - RATE_LIMIT_LIMIT=${RATE_LIMIT_LIMIT:-10}
     depends_on:
       - postgres
       - rabbitmq
@@ -69,12 +72,13 @@ services:
       dockerfile: apps/task-service/Dockerfile
     container_name: task-flow-task-service
     ports:
-      - "3001:3001"
+      - "${TASK_SERVICE_PORT:-3001}:3001"
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgresql://taskflow:taskflow123@postgres:5432/taskflow
-      - RABBITMQ_URL=amqp://taskflow:taskflow123@rabbitmq:5672
-      - REDIS_URL=redis://redis:6379
+      - NODE_ENV=${NODE_ENV:-development}
+      - DATABASE_URL=${DATABASE_URL}
+      - RABBITMQ_URL=${RABBITMQ_URL}
+      - REDIS_URL=${REDIS_URL}
+      - TASK_SERVICE_PORT=${TASK_SERVICE_PORT:-3001}
     depends_on:
       - postgres
       - rabbitmq
@@ -89,12 +93,13 @@ services:
       dockerfile: apps/notification-service/Dockerfile
     container_name: task-flow-notification-service
     ports:
-      - "3002:3002"
+      - "${NOTIFICATION_SERVICE_PORT:-3002}:3002"
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgresql://taskflow:taskflow123@postgres:5432/taskflow
-      - RABBITMQ_URL=amqp://taskflow:taskflow123@rabbitmq:5672
-      - REDIS_URL=redis://redis:6379
+      - NODE_ENV=${NODE_ENV:-development}
+      - DATABASE_URL=${DATABASE_URL}
+      - RABBITMQ_URL=${RABBITMQ_URL}
+      - REDIS_URL=${REDIS_URL}
+      - NOTIFICATION_SERVICE_PORT=${NOTIFICATION_SERVICE_PORT:-3002}
     depends_on:
       - postgres
       - rabbitmq
@@ -111,9 +116,9 @@ services:
     ports:
       - "5173:4173"
     environment:
-      - NODE_ENV=development
-      - VITE_API_URL=http://localhost:3000/api
-      - VITE_WS_URL=ws://localhost:3002
+      - NODE_ENV=${NODE_ENV:-development}
+      - VITE_API_URL=${VITE_API_URL}
+      - VITE_WS_URL=${VITE_WS_URL}
     depends_on:
       - api-gateway
     networks:
