--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,8 +2,19 @@
   "name": "@task-flow/shared",
   "version": "1.0.0",
   "description": "Shared types and utilities",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -13,7 +24,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1"
+    "tslib": "^2.8.1"
   }
 }
