--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -18,8 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "typeorm-ts-node-esm migration:generate -d ./src/config/typeorm.config.ts",
-    "migration:run": "typeorm-ts-node-esm migration:run -d ./src/config/typeorm.config.ts"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/Migration -d src/config/database.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/config/database.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/config/database.config.ts"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
