--- a/apps/notification-service/package.json
+++ b/apps/notification-service/package.json
@@ -27,6 +27,8 @@
     "@nestjs/microservices": "^10.4.15",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/swagger": "^8.0.7",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.15",
     "@task-flow/shared": "file:../../packages/shared",
