--- a/apps/task-service/package.json
+++ b/apps/task-service/package.json
@@ -18,9 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "typeorm-ts-node-esm migration:generate -d ./src/config/typeorm.config.ts",
-    "migration:run": "typeorm-ts-node-esm migration:run -d ./src/config/typeorm.config.ts",
-    "migration:revert": "typeorm-ts-node-esm migration:revert -d ./src/config/typeorm.config.ts"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/Migration -d src/config/typeorm.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/config/typeorm.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/config/typeorm.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -29,6 +30,8 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/microservices": "^10.4.15",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.0.7",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@task-flow/shared": "file:../../packages/shared",
     "amqp-connection-manager": "^4.1.14",
